@@ -1,14 +1,13 @@
 package ru.itsjava.app.services;
 
-import ru.itsjava.dto.Coffee;
+import ru.itsjava.domain.Coffee;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class CoffeeHouseImpl implements ICoffeeHouse{
-    private List<Coffee> coffees;
+public class CoffeeHouseImpl implements CoffeeHouse {
+    private final List<Coffee> coffees;
     public CoffeeHouseImpl(){
-        this.coffees = Arrays.asList(
+        this.coffees = List.of(
             new Coffee("Lavazza", "espresso", 45.00),
             new Coffee("Lavazza", "cappuchino", 50.10),
             new Coffee("Lavazza", "americano", 60.25),
@@ -21,7 +20,7 @@ public class CoffeeHouseImpl implements ICoffeeHouse{
         );
     }
     @Override
-    public void buycoffee(Coffee coffee) {
+    public void buyСoffee(Coffee coffee) {
         for(Coffee c : coffees){
             int number = c.compareTo(coffee);
             if(number == 0){
@@ -31,4 +30,5 @@ public class CoffeeHouseImpl implements ICoffeeHouse{
         }
         System.out.println("Такого кофе у нас нет в ассортименте");
     }
+
 }
